--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -13,8 +13,9 @@
     font-size: 36px;
 
     @include mobile {
-      padding-top: calc(100vh - 100px);
-      font-size: 24px;
+      padding-top: 10px;
+      padding-left: 25px;
+      font-size: 16px;
     }
 
     .progressBar {
