--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -85,6 +85,10 @@
       top: unset;
       bottom: 0;
     }
+    @media screen and (min-width: 739px) and (max-width: 1024px) {
+      height: 60%;
+      right: -10%;
+    }
 
     img {
       width: 100%;
