--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -48,6 +48,10 @@
       }
 
       .buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
         z-index: 3;
         a {
           padding: 20px;
@@ -55,10 +59,9 @@
           border-radius: 10px;
           background-color: transparent;
           color: white;
-          margin-right: 20px;
+
           cursor: pointer;
           font-weight: 300;
-          z-index: 3;
         }
       }
 
@@ -81,10 +84,11 @@
     right: 0;
 
     @include mobile {
-      height: 48%;
-      width: 100%;
+      height: 50%;
+      width: 50%;
       top: unset;
       bottom: 0;
+      right: 25%;
     }
 
     img {
