--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,10 +7,12 @@
     position: sticky;
     top: 0;
     left: 0;
-    padding-top: 50px;
+    padding-top: 30px;
     text-align: center;
     color: orange;
     font-size: 36px;
+    z-index: 2;
+    background-color: #0c0c1d;
 
     @include mobile {
       padding-top: 10px;
@@ -21,6 +23,7 @@
     .progressBar {
       height: 10px;
       background-color: white;
+      z-index: 2;
     }
   }
 
