--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -50,7 +50,7 @@
       .buttons {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         gap: 20px;
         z-index: 3;
         a {
@@ -61,7 +61,7 @@
           color: white;
 
           cursor: pointer;
-          font-weight: 300;
+          font-weight: 500;
         }
       }
 
