--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -45,6 +45,8 @@
 
     @include mobile {
       width: 100%;
+      margin-bottom: 30px;
+      margin-top: 20px;
     }
 
     .title {
@@ -105,6 +107,7 @@
     @include mobile {
       flex-direction: column;
       width: 100%;
+      gap: 20px;
     }
 
     .box {
